[package]
name = "mem_cleaner"
version = "0.4.0" # 版本升级
edition = "2021"

[dependencies]
# 核心 eBPF 库，这次重新开启默认特性，因为它依赖 tokio
aya = "0.12.0" 

bytes = "1.5"

# nix 保持精简
nix = { version = "0.28", default-features = false, features = ["event", "signal", "process"] }

# 时间处理
time = { version = "0.3", default-features = false, features = ["formatting", "local-offset", "macros", "std"] }

# 高性能 Hash
fxhash = "0.2"

# 本地中间层依赖
mem_cleaner_common = { path = "../mem_cleaner_common" }

# 🔥 把 Tokio 加回来，但只作为 I/O 引擎
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }