[package]
name = "mem_cleaner"
version = "0.4.0" # 版本升级
edition = "2021"

[dependencies]
aya = { version = "0.14.0", features = ["async_tokio"] }

bytes = "1.6"

# nix 保持精简
nix = { version = "0.29", default-features = false, features = ["signal", "process", "unistd"] }

# 时间处理
time = { version = "0.3.36", default-features = false, features = ["formatting", "local-offset", "macros", "std"] }

# 高性能 Hash
fxhash = "0.2.1"

# 🔥 把 Tokio 加回来，但只作为 I/O 引擎
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "time"] }

# 本地中间层依赖
mem_cleaner_common = { path = "../mem_cleaner_common" }